tests/rosetta/out/Go/apply-a-callback-to-an-array-2.go
//go:build ignore
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z

package main

import (
	"fmt"
	"strconv"
	"strings"
)

type v map[string]any

// line 4
func each(xs []int, f func(int)) {
	for _, x := range xs {
		f(x)
	}
}

// line 8
func Map(xs []int, f func(int) int) []int {
	var r []int = []int{}
	for _, x := range xs {
		r = append(_toAnySlice(r), any(f(x)))
	}
	return r
}

// line 16
func main() {
	var s []int = []int{
		1,
		2,
		3,
		4,
		5,
	}
	each(s, func(int)(func(i int) any {
		return fmt.Println(strings.TrimSuffix(fmt.Sprintln(any(fmt.Sprint(any((i * i))))), "\n"))
}))
	fmt.Println(strings.TrimSuffix(fmt.Sprintln(any(fmt.Sprint(any(Map(s, func(i int) int {
		return (i * i)
}))))), "\n"))
}

func main() {
	main()
}

func _toAnySlice[T any](s []T) []any {
    out := make([]any, len(s))
    for i, v := range s { out[i] = v }
    return out
}

